#78 - Added zero-copy functionality to the vault.